Updated playable game to v0.9.4

--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,9 @@
 Raging Gardens HISTORY file
 
-V0.9.0
+V0.9.4
+
+Minor fixes in hiscore listing and UI.
+
+V0.9.3
 
 Released for GitHub Game-Off-2012 game jam / hackathon.
